sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:17: error: not found: value i1
    if (isSmaller(b-i+1,b-i1)){
                          ^